@@ -5,7 +5,6 @@
         if ($success !== false) {
             SGL::raiseMsg('%mgrName% insert successfull');
         } else {
-            echo $success;
             SGL::raiseError('%mgrName% insert NOT successfull',
                 SGL_ERROR_NOAFFECTEDROWS);
         }
