@@ -7,7 +7,6 @@
         if ($success !== false) {
             SGL::raiseMsg('%mgrName% update successfull');
         } else {
-            echo $success;
             SGL::raiseError('%mgrName% update NOT successfull',
                 SGL_ERROR_NOAFFECTEDROWS);
         }
