@@ -474,5 +474,8 @@ $defaultWords['Additional Include Path'] = 'Additional Include Path';
 $defaultWords['Custom filter chain'] = 'Custom filter chain';
 $defaultWords['Create CRUD actions'] = 'Create CRUD Actions';
 $defaultWords['Broadcast message'] = 'Broadcast message';
+$defaultWords['Please choose a simple, single word'] = 'Please choose a simple, single word for your module name, it will be used in URIs.';
+$defaultWords['Please give the webserver write permissions to the modules directory'] = 'Please give the webserver write permissions to the modules directory';
+$defaultWords['The manager, which can be'] = 'The manager, which can be one of several per module, is the controller object, so if you want it to deliver pizzas call it PizzaMgr.';
 
 ?>
