@@ -19,15 +19,18 @@
 
             <p>
                 <label class="tipOwner" for="frmCreateModule[moduleName]">{translate(#Module Name#)}
-                <span class="tipText">{translate(#The module name must be identical to a table in the database.#)}</span></label>
+                <span class="tipText">{translate(#Please choose a simple, single word#)}</span></label>
                 <span class="error" flexy:if="error[moduleName]">{translate(error[moduleName])}</span>
                 <input type="text" name="frmCreateModule[moduleName]" id="frmCreateModule[moduleName]"  value="{createModule.moduleName}"/>
             </p>
             <p>
                 <label class="tipOwner" for="frmCreateModule[managerName]">{translate(#Manager Name#)}
-                <span class="tipText">{translate(#Common convention is to use a camel case version of the module name.#)}</span></label>
+                <span class="tipText">{translate(#The manager, which can be#)}</span></label>
                 <span class="error" flexy:if="error[managerName]">{translate(error[managerName])}</span>
                 <input type="text" name="frmCreateModule[managerName]" id="frmCreateModule[managerName]"  value="{createModule.managerName}"/>
+            </p>
+            <p>
+                <span class="error" flexy:if="error[not_writable]">{translate(error[not_writable])}</span>
             </p>
             <p>
                 <label>{translate(#Add following methods#)}</label>
@@ -42,7 +45,7 @@
             </p>
             <p>
                 <label for="frmCreateModule[createCRUD]">{translate(#Create CRUD actions#)}</label>
-                <input type="checkbox" name="frmCreateModule[createCRUD]" id="frmCreateModule[createCRUD]" value="1" checked="checked" />
+                <input type="checkbox" name="frmCreateModule[createCRUD]" id="frmCreateModule[createCRUD]" value="1" />
             </p>
             <p>
                 <label for="frmCreateModule[createTemplates]">{translate(#Create Templates#)}</label>
